pps and guidelines changed
